feat: add readme for rust and ts

--- a/scripts/README.mustache
+++ b/scripts/README.mustache
@@ -1,6 +1,20 @@
 # Vexilla Client - {{LanguageDisplayName}}
 
-This is the {{LanguageDisplayName}} client library for Vexilla, a static file based feature flag system.
+This is the {{LanguageDisplayName}} client library for Vexilla, a static file-based VCS-native feature flag system.
+
+## Table of Contents
+
+- [Getting Started](#getting-started)
+  - [Installation](#installation)
+  - [Setup](#setup)
+  - [Generate Types](#generate-types-optional)
+  - [Usage](#usage)
+  - [Full Example](#full-example)
+- [What are feature flags?](#what-are-feature-flags)
+- [How does it work?](#how-does-it-work)
+- [Support](#support)
+- [API](#api)
+- [Contributing](#contributing)
 
 ## Getting Started
 
@@ -73,17 +87,21 @@ Feature Flags are also a fundamental building block for things such as A/B testi
 
 The process is simple but has several steps to get up and running. Please see our in-depth guides in our [documentation](https://vexilla.dev/documentation).
 
-## Contributing
+## API
 
-Would you like to contribute to this client SDK? There are many ways you can help. Reporting issues or creating PRs are the most obvious. Helping triage the issues and PRs of others would also be a huge help. Being a vibrant member of the community on [Discord](https://discord.gg/GbJu3d93TC) is another way to help out.
-
-If you would like to contribute to the app, docs, or other parts of the project, please go see our [Contribution Guide](https://vexilla.dev/documentation/contributing).
+{{API}}
 
 ## Support
 
 Have you run into a bug? Is there a feature you feel is missing? Feel free to create a [GitHub Issue](https://github.com/vexilla/vexilla/issues).
 
 Another way to get support or help is to reach out in our [Discord community](https://discord.gg/GbJu3d93TC).
+
+## Contributing
+
+Would you like to contribute to this client SDK? There are many ways you can help. Reporting issues or creating PRs are the most obvious. Helping triage the issues and PRs of others would also be a huge help. Being a vibrant member of the community on [Discord](https://discord.gg/GbJu3d93TC) is another way to help out.
+
+If you would like to contribute to the app, docs, or other parts of the project, please go see our [Contribution Guide](https://vexilla.dev/documentation/contributing).
 
 ## Sponsors
 
