--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -49,7 +49,7 @@ const isDocumentation = Astro.url.pathname.startsWith("/documentation");
           <a class="flex items-center" href="/">
             <img
               class="rounded-full bg-slate-600 h-[36px] w-[36px] p-1 mr-2"
-              src="/img/logo-white.svg"
+              src="/img/vexilla-logo.png"
             />
             <span class="m-0 font-display text-4xl">Vexilla</span>
           </a>
