--- a/apps/docs/src/layouts/Layout.astro
+++ b/apps/docs/src/layouts/Layout.astro
@@ -48,7 +48,7 @@ const isDocumentation = Astro.url.pathname.startsWith("/documentation");
         <div class="flex flex-row items-center gap-8">
           <a class="flex items-center" href="/">
             <img
-              class="rounded-full bg-slate-600 h-[36px] w-[36px] p-1 mr-2"
+              class="h-[36px] w-[36px] mr-2"
               src="/img/vexilla-logo.png"
             />
             <span class="m-0 font-display text-4xl">Vexilla</span>
