--- a/apps/docs/src/layouts/Blog.astro
+++ b/apps/docs/src/layouts/Blog.astro
@@ -17,14 +17,14 @@ const blogPosts = rawBlogPosts.sort((postA, postB) => {
 });
 ---
 
-<div class="flex flex-row">
-  <div class="flex-auto main-content pb-10 px-4 w-screen md:w-full">
+<div class="flex flex-col lg:flex-row">
+  <div class="flex-auto main-content pt-10 pb-10 px-4 w-screen sm:w-full">
     <div class="prose lg:prose-xl dark:prose-invert mx-auto" data-pagefind-body>
       <slot />
     </div>
   </div>
 
-  <div class="w-80 p-4">
+  <div class="lg:w-80 p-4 pt-10">
     <h3 class="font-bold">Recent Posts</h3>
     <ul class="pl-6">
       {
