--- a/apps/docs/src/styles/globals.css
+++ b/apps/docs/src/styles/globals.css
@@ -94,6 +94,6 @@ code * {
   }
 
   .text-link {
-    @apply text-indigo-500 dark:text-indigo-300;
+    @apply text-primary-500 dark:text-primary-300;
   }
 }
