--- a/apps/docs/src/components/ResponsiveContainer.astro
+++ b/apps/docs/src/components/ResponsiveContainer.astro
@@ -7,7 +7,7 @@ const { class: className } = Astro.props;
 ---
 
 <div
-  class={`max-w-screen-sm md:max-w-screen-sm lg:max-w-screen-md xl:max-w-screen-lg 2xl:max-w-screen-xl w-full mx-auto ${
+  class={`lg:max-w-screen-lg xl:max-w-screen-lg 2xl:max-w-screen-xl w-full mx-auto ${
     className || ""
   }`}
 >
