--- a/apps/docs/src/pages/guides/[slug].astro
+++ b/apps/docs/src/pages/guides/[slug].astro
@@ -4,7 +4,7 @@ import Guides from "@/layouts/Guides.astro";
 import Layout from "@/layouts/Layout.astro";
 // 1. Generate a new path for every collection entry
 export async function getStaticPaths() {
-  const blogEntries = await getCollection("documentation");
+  const blogEntries = await getCollection("guides");
   return blogEntries.map((entry) => ({
     params: { slug: entry.slug },
     props: { entry },
