--- a/apps/docs/src/components/home/how-it-works.astro
+++ b/apps/docs/src/components/home/how-it-works.astro
@@ -55,7 +55,7 @@ const steps: StepContent[] = [
         </div>
         <div class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row">
           <div class="flex-shrink-0 w-24 h-24 bg-slate-100 text-primary-500 rounded-full inline-flex items-center justify-center">
-            <Icon className="w-12 h-12" icon={step.image} />
+            <Icon className="w-12 h-12" icon={settingsLinear} />
           </div>
           <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
             <h2 class="font-medium title-font text-emphasis mb-1 text-xl">
